added top bar list

--- a/google.html
+++ b/google.html
@@ -4,6 +4,14 @@
         <title>Google</title>
     </head>
     <body>
+        <ul>
+            <li>About</li>
+            <li>Store</li>
+            <li>Gmail</li>
+            <li>Images</li>
+            <li>insert boxes</li>
+            <li>insert user image</li>
+        </ul>
         <img src="./google-logo.jpg" width="120px" height="90px" alt="Google logo">
         <form action="search" method="GET">
             <input type="text">
