--- a/google.html
+++ b/google.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link href="reset.css" rel="stylesheet">
+        <link href="google-style.css" rel="stylesheet">
         <title>Google</title>
     </head>
     <body>
@@ -12,7 +14,7 @@
             <li>insert boxes</li>
             <li>insert user image</li>
         </ul>
-        <img src="./google-logo.jpg" width="120px" height="90px" alt="Google logo">
+        <img src="./google-logo.jpg" width="120px" height="90px" alt="Google logo" class="image">
         <form action="search" method="GET">
             <input type="text">
         </form>
