centered and sized input bar

--- a/google.html
+++ b/google.html
@@ -16,7 +16,7 @@
         </ul>
         <img src="./google-logo.jpg" width="120px" height="90px" alt="Google logo" class="image">
         <form action="search" method="GET">
-            <input type="text">
+            <input type="text" class="search-bar">
         </form>
     </body>
 </html>
