floated things to right on nav bar, updated nav bar spacing

--- a/google.html
+++ b/google.html
@@ -9,10 +9,10 @@
         <ul>
             <li>About</li>
             <li>Store</li>
-            <li>Gmail</li>
-            <li>Images</li>
-            <li>insert boxes</li>
-            <li>insert user image</li>
+            <li style="float:right">Gmail</li>
+            <li style="float:right">Images</li>
+            <li style="float:right">insert boxes</li>
+            <li style="float:right">insert user image</li>
         </ul>
         <img src="./google-logo.jpg" width="120px" height="90px" alt="Google logo" class="image">
         <form action="search" method="GET">
