added footer, floated li's to right

--- a/google.html
+++ b/google.html
@@ -9,14 +9,24 @@
         <ul>
             <li>About</li>
             <li>Store</li>
-            <li style="float:right">Gmail</li>
-            <li style="float:right">Images</li>
-            <li style="float:right">insert boxes</li>
-            <li style="float:right">insert user image</li>
+            <li style="float:right;">user image</li>
+            <li style="float:right;">boxes</li>
+            <li style="float:right;">Images</li>
+            <li style="float:right;">Gmail</li>
         </ul>
         <img src="./google-logo.jpg" width="120px" height="90px" alt="Google logo" class="image">
         <form action="search" method="GET">
             <input type="text" class="search-bar">
         </form>
     </body>
+    <div class="footer">
+        <ul>
+            <li>Advertising</li>
+            <li>Business</li>
+            <li>How Search works</li>
+            <li style="float: right;">Settings</li>
+            <li style="float: right;">Terms</li>
+            <li style="float: right;">Privacy</li>
+        </ul>
+    </div>
 </html>
