--- a/google.html
+++ b/google.html
@@ -7,12 +7,12 @@
     </head>
     <body>
         <ul>
-            <li>About</li>
-            <li>Store</li>
-            <li style="float:right;">user image</li>
-            <li style="float:right;">boxes</li>
-            <li style="float:right;">Images</li>
-            <li style="float:right;">Gmail</li>
+            <li class="nav-bar">About</li>
+            <li class="nav-bar">Store</li>
+            <li class="nav-bar" style="float:right;">user image</li>
+            <li class="nav-bar" style="float:right;">boxes</li>
+            <li class="nav-bar" style="float:right;">Images</li>
+            <li class="nav-bar" style="float:right;">Gmail</li>
         </ul>
         <img src="./google-logo.jpg" width="120px" height="90px" alt="Google logo" class="image">
         <form action="search" method="GET">
@@ -21,12 +21,12 @@
     </body>
     <div class="footer">
         <ul>
-            <li>Advertising</li>
-            <li>Business</li>
-            <li>How Search works</li>
-            <li style="float: right;">Settings</li>
-            <li style="float: right;">Terms</li>
-            <li style="float: right;">Privacy</li>
+            <li class="li-footer">Advertising</li>
+            <li class="li-footer">Business</li>
+            <li class="li-footer">How Search works</li>
+            <li class="li-footer" style="float: right;">Settings</li>
+            <li class="li-footer" style="float: right;">Terms</li>
+            <li class="li-footer" style="float: right;">Privacy</li>
         </ul>
     </div>
 </html>
