--- a/google.html
+++ b/google.html
@@ -17,6 +17,10 @@
         <img src="./google-logo.jpg" width="120px" height="90px" alt="Google logo" class="image">
         <form action="search" method="GET">
             <input type="text" class="search-bar">
+            <ul>
+                <li><input type="submit" value="Google Search" class="button"></li>
+                <li><input type="submit" value="I'm Feeling Lucky" class="button"></li>
+            </ul>
         </form>
     </body>
     <div class="footer">
