centered and styled buttons

--- a/google.html
+++ b/google.html
@@ -17,10 +17,12 @@
         <img src="./google-logo.jpg" width="120px" height="90px" alt="Google logo" class="image">
         <form action="search" method="GET">
             <input type="text" class="search-bar">
-            <ul>
-                <li><input type="submit" value="Google Search" class="button"></li>
-                <li><input type="submit" value="I'm Feeling Lucky" class="button"></li>
-            </ul>
+            <center>
+                <ul>
+                    <li><input type="submit" value="Google Search" class="button"></li>
+                    <li><input type="submit" value="I'm Feeling Lucky" class="button"></li>
+                </ul>
+            </center>
         </form>
     </body>
     <div class="footer">
