separated input bar form from button form

--- a/google.html
+++ b/google.html
@@ -15,15 +15,19 @@
             <li class="nav-bar" style="float:right;">Gmail</li>
         </ul>
         <img src="./google-logo.jpg" width="120px" height="90px" alt="Google logo" class="image">
-        <form action="search" method="GET">
-            <input type="text" class="search-bar">
-            <center>
+        <div class="div">
+            <form action="search" method="GET">
+                <input type="text" class="search-bar">
+            </form>    
+        </div>
+        <center>
+            <form>  
                 <ul>
                     <li><input type="submit" value="Google Search" class="button"></li>
                     <li><input type="submit" value="I'm Feeling Lucky" class="button"></li>
                 </ul>
-            </center>
-        </form>
+            </form>    
+        </center>
     </body>
     <div class="footer">
         <ul>
