added and sized app boxes

--- a/google.html
+++ b/google.html
@@ -9,8 +9,8 @@
         <ul>
             <li class="nav-bar">About</li>
             <li class="nav-bar">Store</li>
-            <li class="nav-bar" style="float:right;">user image</li>
-            <li class="nav-bar" style="float:right;">boxes</li>
+            <li class="nav-bar" style="float:right;">User image</li>
+            <li class="nav-bar" style="float:right;"><img src="./appsbutton.png" alt="Apps button" height="15px" width="15px"></li>
             <li class="nav-bar" style="float:right;">Images</li>
             <li class="nav-bar" style="float:right;">Gmail</li>
         </ul>
